--- a/index.html
+++ b/index.html
@@ -107,14 +107,9 @@ th{
   font-weight:800;
 }
 
-.locked *{
+.locked *:not(#lockBtn){
   pointer-events:none;
   opacity:.6;
-}
-
-#lockBtn{
-  pointer-events:auto !important;
-  opacity:1 !important;
 }
 
 @media (max-width:480px){
@@ -165,8 +160,6 @@ th{
     <th>✔</th>
     <th>Name</th>
     <th>Amount</th>
-    <th>Debt</th>
-    <th>Type</th>
     <th></th>
   </tr>
 </thead>
@@ -197,10 +190,14 @@ th{
   <button id="addDebt">+ Add Debt</button>
 </div>
 
+<div class="card">
+  <h2>Debt Payoff Insight</h2>
+  <div id="payoff"></div>
+</div>
 </div>
 
 <script>
-/* ========= STABLE CORE (CLEAN) ========= */
+/* ========= STABLE CORE ========= */
 
 const $ = id => document.getElementById(id);
 const money = n => `$${(Number(n)||0).toFixed(2)}`;
@@ -232,23 +229,17 @@ let locked = false;
   yearSel.value  = now.getFullYear();
 })();
 
-/* ---------- Rows ---------- */
+/* Rows */
 function addRow(table, cells){
   const tr = document.createElement("tr");
   tr.innerHTML = cells + `<td><span class="remove">×</span></td>`;
-
   tr.querySelector(".remove").onclick = () => {
     if(locked) return;
     tr.remove();
     update();
   };
-
-  tr.querySelectorAll("input,select").forEach(i=>{
-    i.oninput = update;
-  });
-
+  tr.querySelectorAll("input").forEach(i=>i.oninput=update);
   table.appendChild(tr);
-  update();
 }
 
 $("addIncome").onclick = ()=>!locked && addRow(incomeT,
@@ -258,14 +249,7 @@ $("addIncome").onclick = ()=>!locked && addRow(incomeT,
 $("addBill").onclick = ()=>!locked && addRow(billsT,
   `<td><input type="checkbox"></td>
    <td><input></td>
-   <td><input type="number"></td>
-   <td><select><option value="">—</option></select></td>
-   <td>
-     <select>
-       <option value="regular">Regular</option>
-       <option value="principal">Principal</option>
-     </select>
-   </td>`
+   <td><input type="number"></td>`
 );
 
 $("addDebt").onclick = ()=>!locked && addRow(debtT,
@@ -279,47 +263,62 @@ $("addDebt").onclick = ()=>!locked && addRow(debtT,
    <td>$0.00</td>`
 );
 
-/* ---------- Lock ---------- */
+/* Lock */
 lockBtn.onclick = ()=>{
   locked = !locked;
-
-  app.classList.toggle("locked", locked);
-
-  lockBtn.textContent = locked
-    ? "🔒 Unlock Month"
-    : "🔓 Lock Month";
-
+  app.classList.toggle("locked",locked);
+  lockBtn.textContent = locked ? "🔒 Unlock Month" : "🔓 Lock Month";
   save();
 };
 
-/* ---------- Helpers ---------- */
-function updateDebtDropdowns(){
-  const names = [...debtT.querySelectorAll("tr")]
-    .map(r => r.children[0].querySelector("input").value)
-    .filter(Boolean);
-
-  billsT.querySelectorAll("tr").forEach(r=>{
-    const sel = r.children[3].querySelector("select");
-    const cur = sel.value;
-
-    sel.innerHTML =
-      `<option value="">—</option>` +
-      names.map(n=>`<option value="${n}">${n}</option>`).join("");
-
-    sel.value = cur;
-  });
-}
-
-function sumIncome(){
+/* Calculate */
+function sum(table){
   let t=0;
-  incomeT.querySelectorAll("tr").forEach(r=>{
+  table.querySelectorAll("tr").forEach(r=>{
     t += Number(r.children[1].querySelector("input").value)||0;
   });
   return t;
 }
 
+function updateDebtLinks(){
+  const debtMap = {};
+debtTable.querySelectorAll("tr").forEach(r=>{
+  const name = r.children[0].querySelector("input").value;
+  debtMap[name] = { pay: 0, extra: 0 };
+});
+
+billsTable.querySelectorAll("tr").forEach(r=>{
+  const paid = r.children[0].querySelector("input").checked;
+  const amt  = num(r.children[3].querySelector("input").value);
+  const link = r.children[4].querySelector("select").value;
+  const type = r.children[5].querySelector("select").value;
+
+  if(!paid){
+    bills += amt;
+    r.children[6].textContent = money(amt);
+  } else {
+    r.children[6].textContent = money(0);
+
+    if(link && debtMap[link]){
+      type === "principal"
+        ? debtMap[link].extra += amt
+        : debtMap[link].pay   += amt;
+    }
+  }
+});
+
+function update(){
+  const start = Number(startBal.value)||0;
+  const income = sum(incomeT);
+  const bills = sumUnpaidBills();
+  const debt = calculateDebt();
+  const rem = start + income - bills - debt;
+  remaining.textContent = money(rem);
+  save();
+}
+
 function sumUnpaidBills(){
-  let t=0;
+  let t = 0;
   billsT.querySelectorAll("tr").forEach(r=>{
     const paid = r.children[0].querySelector("input").checked;
     const amt  = Number(r.children[2].querySelector("input").value)||0;
@@ -329,69 +328,37 @@ function sumUnpaidBills(){
   return t;
 }
 
-/* ---------- CORE UPDATE ---------- */
-function update(){
-  updateDebtDropdowns();
-
-  const start   = Number(startBal.value)||0;
-  const income  = sumIncome();
-  const bills   = sumUnpaidBills();
-
-  /* Build bill → debt map */
-  const billToDebt = {};
-  debtT.querySelectorAll("tr").forEach(r=>{
-    const name = r.children[0].querySelector("input").value;
-    billToDebt[name] = { pay: 0, extra: 0 };
-  });
-
-  billsT.querySelectorAll("tr").forEach(r=>{
-    const paid = r.children[0].querySelector("input").checked;
-    const amt  = Number(r.children[2].querySelector("input").value)||0;
-    const debt = r.children[3].querySelector("select").value;
-    const type = r.children[4].querySelector("select").value;
-
-    if(paid && debt && billToDebt[debt]){
-      type === "principal"
-        ? billToDebt[debt].extra += amt
-        : billToDebt[debt].pay   += amt;
-    }
-  });
-
-  /* Calculate debt */
-  let debtOut = 0;
+function calculateDebt(){
+  let total = 0;
 
   debtT.querySelectorAll("tr").forEach(r=>{
-    const name  = r.children[0].querySelector("input").value;
     const bal   = Number(r.children[1].querySelector("input").value)||0;
     const apr   = Number(r.children[2].querySelector("input").value)||0;
     const pay   = Number(r.children[3].querySelector("input").value)||0;
     const extra = Number(r.children[4].querySelector("input").value)||0;
 
-    const linkedPay   = billToDebt[name]?.pay   || 0;
-    const linkedExtra = billToDebt[name]?.extra || 0;
+    const linkedPay   = debtMap[name]?.pay   || 0;
+const linkedExtra = debtMap[name]?.extra || 0;
 
-    const interest = bal * (apr/100/12);
-    const principal =
-      Math.max((pay + linkedPay) - interest, 0)
-      + extra
-      + linkedExtra;
+const interest = bal * (apr/100/12);
+const principal =
+  Math.max((pay + linkedPay) - interest, 0)
+  + extra
+  + linkedExtra;
 
-    const newBal = Math.max(bal - principal, 0);
+const newBal = Math.max(bal - principal, 0);
 
     r.children[5].textContent = money(interest);
     r.children[6].textContent = money(principal);
     r.children[7].textContent = money(newBal);
 
-    debtOut += pay + extra + linkedPay + linkedExtra;
+    total += pay + extra;
+debtOut += pay + extra + linkedPay + linkedExtra;
   });
 
-  const rem = start + income - bills - debtOut;
-  remaining.textContent = money(rem);
-
-  save();
+  return total;
 }
-
-/* ---------- Save / Load ---------- */
+/* Save / Load */
 function key(){
   return `stable-${yearSel.value}-${monthSel.value}`;
 }
@@ -399,7 +366,10 @@ function key(){
 function save(){
   localStorage.setItem(key(), JSON.stringify({
     locked,
-    start: startBal.value
+    start: startBal.value,
+    income:[...incomeT.children].map(r=>r.children[1].querySelector("input").value),
+    bills:[...billsT.children].map(r=>r.children[1].querySelector("input").value),
+    debt:[...debtT.children].map(r=>r.children[1].querySelector("input").value)
   }));
 }
 
